--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -18,29 +18,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a donation amount" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SvR-6H-qBO">
-                                <rect key="frame" x="16" y="36" width="568" height="22"/>
+                                <rect key="frame" x="16" y="80" width="568" height="22"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" red="1" green="0.38665899170000001" blue="0.2383080414" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
-                                <rect key="frame" x="16" y="74" width="568" height="29"/>
+                                <rect key="frame" x="16" y="118" width="568" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
-                                <rect key="frame" x="282" y="155" width="37" height="37"/>
+                                <rect key="frame" x="282" y="199" width="37" height="37"/>
                                 <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOE-Kh-Wj0">
-                                <rect key="frame" x="36" y="118" width="12" height="24"/>
+                                <rect key="frame" x="36" y="162" width="12" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" red="0.32944389029999999" green="0.80239898990000003" blue="0.3813414343" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w0T-Ke-GEe">
-                                <rect key="frame" x="56" y="115" width="508" height="30"/>
+                                <rect key="frame" x="56" y="159" width="508" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="134" id="Um0-Q5-JoP"/>
                                 </constraints>
@@ -56,7 +56,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIa-eQ-G72">
-                                <rect key="frame" x="271" y="157" width="58" height="34"/>
+                                <rect key="frame" x="271" y="201" width="58" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleColor" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
@@ -100,6 +100,19 @@
                             <outletCollection property="gestureRecognizers" destination="dyE-ae-d4I" appends="YES" id="ggg-9F-kLi"/>
                         </connections>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Swipe Card" id="5lC-rV-Phd">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="df9-1N-dVB">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Donate" id="5zg-Gx-PwT">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="submitInformationAction:" destination="Zdb-yW-H1R" id="xmI-2h-NGb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="activityIndicator" destination="aff-pR-Ufo" id="DNd-5u-zRl"/>
                         <outlet property="donationField" destination="w0T-Ke-GEe" id="Y44-FK-dmu"/>
@@ -346,7 +359,10 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Manual Entry" id="lim-MI-Ixe">
-                        <barButtonItem key="rightBarButtonItem" title="Submit" id="DFB-Sr-BLT">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="DTI-3Z-Vxh">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Donate" id="DFB-Sr-BLT">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="submitInformationAction:" destination="Zdb-yW-H1R" id="Hzn-H5-tWm"/>
@@ -411,6 +427,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="3Se-mT-u07"/>
+        <segue reference="dGc-Ic-WNA"/>
     </inferredMetricsTieBreakers>
 </document>
